# DRF-Projects

./: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
auth_app/: models.py  serializers.py  urls.py  views.py
mainproject/: settings.py  urls.py
templates/weather_app/: index.html
weather_app/: urls.py  views.py
