[tool.black]
line-length = 88
extend-exclude = '''
(\.html|\.jinja2)$
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["mainproject"]


[project]
name = "mainproject"
version = "0.1.0"
description = "A Django project with DRF"
authors = [
    { name = "Harrish P T", email = "harrishpt@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "asgiref==3.9.1",
    "django==5.2.5",
    "django-jazzmin>=3.0.1",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt==5.5.1",
    "pyjwt==2.10.1",
    "python-dotenv==1.1.1",
    "rest-framework-simplejwt==0.0.2",
    "sqlparse==0.5.3",
    "tzdata==2025.2",
    "uv==0.8.17",
]
